fix product stretchng image bug and improve about us page

--- a/src/components/Products/ProductPage.css
+++ b/src/components/Products/ProductPage.css
@@ -6,7 +6,9 @@
 }
 
 .product_container .product_image {
+  height: 35%;
   width: 35%;
+  border-radius: 1rem;
 }
 .product_container .right {
   margin: 1%;
@@ -122,11 +124,15 @@ quadpay-widget {
   border-color: #ffffff !important;
 }
 .product_container
-  .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):hover::before {
+  .ant-radio-button-wrapper-checked:not(
+    .ant-radio-button-wrapper-disabled
+  ):hover::before {
   background: none;
 }
 .product_container
-  .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled)::before {
+  .ant-radio-button-wrapper-checked:not(
+    .ant-radio-button-wrapper-disabled
+  )::before {
   background: none;
 }
 
